test-suite/typecheck/pass/constraint_ord.first
import * "Prelude"
function max2<T : Ord>(a: T, b: T) -> T {
  return if (a < b) { b } else { a };
}
function f() -> Int { return max2(1, 2); }
