test-suite/typecheck/fail/implementation_wrong_type.first
import * "Prelude"
interface Eq<T> { eq: function(T, T) -> Bool; }
function eqInt(a: Int, b: Int) -> Bool { return a == b; }
implementation Eq<String> { eq = eqInt; }
